--- a/templates/boardgames/show.html.twig
+++ b/templates/boardgames/show.html.twig
@@ -9,7 +9,7 @@
 <table>
                 <thead>
                     <tr>
-                        <th class="text-red-600">Name</th>
+                        <th>Name</th>
                         <th>Rating</th>
                         <th>Release year</th>
                     </tr>
