--- a/templates/boardgames/show.html.twig
+++ b/templates/boardgames/show.html.twig
@@ -5,30 +5,29 @@
 
 {% block body %}
 
-<h1>Boardgame Library</h1>
-<table>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Rating</th>
-                        <th>Release year</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for boardgame in boardgames %}
-                        <tr>
-                            <td>
-                                {{boardgame.title}}
-                            </td>
-                            <td>
-                                {{ boardgame.ratingBoardgameGeek}}
-                            </td>
-                            <td>
-                                {{boardgame.releaseYear}} 
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+<div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+    <h1 class="text-3xl font-bold leading-tight text-gray-900">Boardgame Library</h1>
+    <div class="my-4">
+        <a href="{{ path('app_boardgame_new') }}" class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500 focus:bg-indigo-700">Add a new boardgame</a>
+    </div>
+    <table class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-50">
+            <tr>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Rating</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Release year</th>
+            </tr>
+        </thead>
+        <tbody class="bg-white divide-y divide-gray-200">
+            {% for boardgame in boardgames %}
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap">{{boardgame.title}}</td>
+                    <td class="px-6 py-4 whitespace-nowrap">{{ boardgame.ratingBoardgameGeek }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap">{{ boardgame.releaseYear }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 
 {% endblock %}
