--- a/templates/boardgames/show.html.twig
+++ b/templates/boardgames/show.html.twig
@@ -16,6 +16,7 @@
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Rating</th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Release year</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Picture</th>
             </tr>
         </thead>
         <tbody class="bg-white divide-y divide-gray-200">
@@ -24,8 +25,7 @@
                     <td class="px-6 py-4 whitespace-nowrap">{{boardgame.title}}</td>
                     <td class="px-6 py-4 whitespace-nowrap">{{ boardgame.ratingBoardgameGeek }}</td>
                     <td class="px-6 py-4 whitespace-nowrap">{{ boardgame.releaseYear }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap"><img src="{{ asset(boardgame.imagePath) }}" alt="{{ boardgame.title }}" class="w-18 h-18"></td>
-                    <td class="px-6 py-4 whitespace-nowrap">{{ boardgame.description }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap"><img src="{{ asset(boardgame.imagePath) }}" alt="{{ boardgame.title }}" class="w-16 h-16"></td>
                 </tr>
             {% endfor %}
         </tbody>
