--- a/templates/boardgames/show.html.twig
+++ b/templates/boardgames/show.html.twig
@@ -27,6 +27,13 @@
                     <td class="px-6 py-4 whitespace-nowrap">{{ boardgame.releaseYear }}</td>
                     <td class="px-6 py-4 whitespace-nowrap"><img src="{{ asset(boardgame.imagePath) }}" alt="{{ boardgame.title }}" class="w-16 h-16"></td>
                     <td class="px-6 py-4 whitespace-nowrap"><a href="{{ path('app_boardgame_edit', {'id': boardgame.id}) }}">Edit</a></td>
+                    <td>
+                      <form action="{{ path('app_boardgame_delete', {'id': boardgame.id}) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this boardgame?')">
+                        <input type="hidden" name="_method" value="DELETE">
+                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ boardgame.id) }}">
+                         <button type="submit" class="text-red-500 font-bold">Delete</button>
+                       </form>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
