--- a/templates/boardgames/show.html.twig
+++ b/templates/boardgames/show.html.twig
@@ -7,9 +7,9 @@
 
 <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
     <h1 class="text-3xl font-bold leading-tight text-gray-900">Boardgame Library</h1>
-    <div class="my-4">
-        <a href="{{ path('app_boardgame_new') }}" class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500 focus:bg-indigo-700">Add a new boardgame</a>
-    </div>
+   <div class="flex justify-between my-4">
+    <a href="{{ path('app_boardgame_new') }}" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-500 focus:bg-indigo-700">Add a new boardgame</a>
+</div>
     <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-50">
             <tr>
@@ -28,16 +28,15 @@
                     <td class="px-6 py-4 whitespace-nowrap"><img src="{{ asset(boardgame.imagePath) }}" alt="{{ boardgame.title }}" class="w-16 h-16"></td>
                     <td class="px-6 py-4 whitespace-nowrap"><a href="{{ path('app_boardgame_edit', {'id': boardgame.id}) }}">Edit</a></td>
                     <td>
-                      <form action="{{ path('app_boardgame_delete', {'id': boardgame.id}) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this boardgame?')">
+                      <form action="{{ path('app_boardgame_delete', {'id': boardgame.id}) }}" method="POST" 
+                      onsubmit="return confirm('Are you sure you want to delete this boardgame?')">
                         <input type="hidden" name="_method" value="DELETE">
                          <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ boardgame.id) }}">
                          <button type="submit" class="text-red-500 font-bold">Delete</button>
                        </form>
                     </td>
-                </tr>
             {% endfor %}
         </tbody>
     </table>
-</div>
 
 {% endblock %}
