register link added

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -60,6 +60,12 @@
             type="submit">
             Sign in
         </button>
+    <div class="mt-4">
+            <p class="text-gray-500 text-lg">Don't have an account? 
+                <a href="{{ path('app_register') }}" class="text-blue-500 hover:underline">Register here!</a>
+            </p>
+        </div>
     </div>
 </form>
+
 {% endblock %}
