--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,15 +11,16 @@
                 {{ form_start(registrationForm) }}
                 <div class="mt-4">
                     <div class="mb-4">
-                        {{ form_label(registrationForm.email, null, {'label_attr': {'class': 'block font-medium text-sm text-gray-700 mb-2'}}) }}
+                        {{ form_label(registrationForm.email, null, ) }}
                         {{ form_widget(registrationForm.email, {'attr': {'class': 'form-input w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm'}}) }}
                         {{ form_errors(registrationForm.email, {'attr': {'class': 'mt-2 text-sm text-red-600'}}) }}
                     </div>
+                    
                     <div class="mb-4">
-                        {{ form_label(registrationForm.plainPassword, null, {'label_attr': {'class': 'block font-medium text-sm text-gray-700 mb-2'}}) }}
-                        {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'form-input w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm'}}) }}
-                        {{ form_errors(registrationForm.plainPassword, {'attr': {'class': 'mt-2 text-sm text-red-600'}}) }}
+                        {{ form_widget(registrationForm.password) }}
+                        {{ form_errors(registrationForm.password, {'attr': {'class': 'mt-2 text-sm text-red-600'}}) }}
                     </div>
+                    
                     <div class="mb-4">
                         {{ form_widget(registrationForm.agreeTerms, {'attr': {'class': 'form-checkbox h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded'}}) }}
                         {{ form_label(registrationForm.agreeTerms, 'I agree to the terms and conditions', {'label_attr': {'class': 'ml-2 block text-sm text-gray-900'}}) }}
