--- a/templates/boardgames/show.html.twig
+++ b/templates/boardgames/show.html.twig
@@ -10,9 +10,21 @@
    <div class="flex justify-between my-4">
     <a href="{{ path('app_boardgame_new') }}" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-500 focus:bg-indigo-700">Add a new boardgame</a>
 </div>
-    {{ form_start(form) }}
-    {{ form_row(form.orderBy, {'attr': {'class': 'form-control'}}) }}
-    {{ form_end(form) }}
+  <div class="flex">
+            <div class="flex-grow">
+                {{ form_start(form) }}
+                    {{ form_row(form.orderBy, {'attr': {'class': 'form-control'}}) }}
+                {{ form_end(form) }}
+            </div>
+            <div class="flex-shrink">
+                <form action="{{ path('app_boardgame') }}" method="GET">
+                    <div class="input-group">
+                        <input type="text" name="q" class="form-control" placeholder="Search boardgames">
+                        <button type="submit" class="btn btn-primary">Search</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-50">
             <tr>
