--- a/templates/boardgames/show.html.twig
+++ b/templates/boardgames/show.html.twig
@@ -18,13 +18,15 @@
             </div>
             <div class="flex-shrink">
                 <form action="{{ path('app_boardgame') }}" method="GET">
-                    <div class="input-group">
-                        <input type="text" name="q" class="form-control" placeholder="Search boardgames">
-                        <button type="submit" class="btn btn-primary">Search</button>
-                    </div>
-                </form>
+                    <div class="flex items-center">
+                <input type="text" name="q" class="form-control mr-2" placeholder="Search boardgames">
+                <button type="submit" class="btn btn-primary">Search</button>
             </div>
-        </div>
+            <a href="{{ path('app_boardgame') }}" class="inline-block px-4 py-2 bg-gray-300 hover:bg-gray-400 
+            text-gray-700 font-medium rounded">Return</a>
+        </form>
+    </div>
+</div>
     <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-50">
             <tr>
