--- a/templates/boardgames/show.html.twig
+++ b/templates/boardgames/show.html.twig
@@ -7,26 +7,23 @@
 
 <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
     <h1 class="text-3xl font-bold leading-tight text-gray-900">Boardgame Library</h1>
-   <div class="flex justify-between my-4">
-    <a href="{{ path('app_boardgame_new') }}" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-500 focus:bg-indigo-700">Add a new boardgame</a>
-</div>
-  <div class="flex">
-            <div class="flex-grow">
-                {{ form_start(form) }}
-                    {{ form_row(form.orderBy, {'attr': {'class': 'form-control'}}) }}
-                {{ form_end(form) }}
-            </div>
-            <div class="flex-shrink">
-                <form action="{{ path('app_boardgame') }}" method="GET">
-                    <div class="flex items-center">
-                <input type="text" name="q" class="form-control mr-2" placeholder="Search boardgames">
+    <div class="flex justify-between my-4">
+        <a href="{{ path('app_boardgame_new') }}" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-500 focus:bg-indigo-700">Add a new boardgame</a>
+        <form action="{{ path('app_boardgame') }}" method="GET">
+            <div class="flex items-center">
+                <input type="text" name="q" class="form-control mr-2 h-8 px-2 border rounded" placeholder="Search boardgames">
                 <button type="submit" class="btn btn-primary">Search</button>
+                <a href="{{ path('app_boardgame') }}" class="inline-block px-4 py-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-medium rounded ml-2">Return</a>
             </div>
-            <a href="{{ path('app_boardgame') }}" class="inline-block px-4 py-2 bg-gray-300 hover:bg-gray-400 
-            text-gray-700 font-medium rounded">Return</a>
         </form>
     </div>
-</div>
+    <div class="flex">
+        <div class="flex-grow">
+            {{ form_start(form) }}
+            {{ form_row(form.orderBy, {'attr': {'class': 'form-control'}}) }}
+            {{ form_end(form) }}
+        </div>
+    </div>
     <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-50">
             <tr>
