--- a/templates/boardgame_user/index.html.twig
+++ b/templates/boardgame_user/index.html.twig
@@ -1,20 +1,43 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Hello BoardgameUserController!{% endblock %}
+{% extends "base.html.twig" %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp3/htdocs/php-advanced-projects/boardgame_library/src/Controller/BoardgameUserController.php'|file_link(0) }}">src/Controller/BoardgameUserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp3/htdocs/php-advanced-projects/boardgame_library/templates/boardgame_user/index.html.twig'|file_link(0) }}">templates/boardgame_user/index.html.twig</a></code></li>
-    </ul>
-</div>
+<div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+    <h1 class="text-3xl font-bold leading-tight text-gray-900">Boardgame Library</h1>
+    <div class="flex justify-between my-4">
+        <form action="{{ path('app_boardgame') }}" method="GET">
+            <div class="flex items-center">
+                <input type="text" name="q" class="form-control mr-2 h-8 px-2 border rounded" placeholder="Search boardgames">
+                <button type="submit" class="btn btn-primary">Search</button>
+                <a href="{{ path('app_boardgame') }}" class="inline-block px-4 py-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-medium rounded ml-2">Return</a>
+            </div>
+        </form>
+    </div>
+    <div class="flex">
+        <div class="flex-grow">
+            {{ form_start(form) }}
+            {{ form_row(form.orderBy, {'attr': {'class': 'form-control'}}) }}
+            {{ form_end(form) }}
+        </div>
+    </div>
+    <table class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-50">
+            <tr>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Rating</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Release year</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Picture</th>
+            </tr>
+        </thead>
+        <tbody class="bg-white divide-y divide-gray-200">
+            {% for boardgame in boardgames %}
+                <tr>
+                    <td class="px-6 py-4 whitespace-nowrap">{{boardgame.title}}</td>
+                    <td class="px-6 py-4 whitespace-nowrap">{{ boardgame.ratingBoardgameGeek }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap">{{ boardgame.releaseYear }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap"><img src="{{ asset(boardgame.imagePath) }}" alt="{{ boardgame.title }}" class="w-16 h-16"></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
