--- a/templates/boardgame_user/index.html.twig
+++ b/templates/boardgame_user/index.html.twig
@@ -5,11 +5,11 @@
 <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
     <h1 class="text-3xl font-bold leading-tight text-gray-900">Boardgame Library</h1>
     <div class="flex justify-between my-4">
-        <form action="{{ path('app_boardgame') }}" method="GET">
+        <form action="{{ path('app_boardgame_user') }}" method="GET">
             <div class="flex items-center">
                 <input type="text" name="q" class="form-control mr-2 h-8 px-2 border rounded" placeholder="Search boardgames">
                 <button type="submit" class="btn btn-primary">Search</button>
-                <a href="{{ path('app_boardgame') }}" class="inline-block px-4 py-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-medium rounded ml-2">Return</a>
+                <a href="{{ path('app_boardgame_user') }}" class="inline-block px-4 py-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-medium rounded ml-2">Return</a>
             </div>
         </form>
     </div>
