--- a/templates/boardgame_user/index.html.twig
+++ b/templates/boardgame_user/index.html.twig
@@ -12,6 +12,9 @@
                 <a href="{{ path('app_boardgame_user') }}" class="inline-block px-4 py-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-medium rounded ml-2">Return</a>
             </div>
         </form>
+        <div>
+            <a href="{{ path('app_logout') }}" class="inline-block px-4 py-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-medium rounded">Logout</a>
+        </div>
     </div>
     <div class="flex">
         <div class="flex-grow">
