--- a/templates/boardgames/single.html.twig
+++ b/templates/boardgames/single.html.twig
@@ -1,20 +1,21 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Hello IndividualBoardgameController!{% endblock %}
+{% extends "base.html.twig" %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp3/htdocs/php-advanced-projects/boardgame_library/src/Controller/IndividualBoardgameController.php'|file_link(0) }}">src/Controller/IndividualBoardgameController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp3/htdocs/php-advanced-projects/boardgame_library/templates/individual_boardgame/index.html.twig'|file_link(0) }}">templates/individual_boardgame/index.html.twig</a></code></li>
-    </ul>
+<div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+    <h1 class="text-3xl font-bold leading-tight text-gray-900">{{ boardgame.title }}</h1>
+    <div class="flex justify-between my-4">
+        <a href="{{ path('app_boardgame') }}" class="inline-block px-4 py-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-medium rounded ml-2">Return</a>
+    </div>
+    <div class="flex items-center justify-center">
+        <img src="{{ asset(boardgame.imagePath) }}" alt="{{ boardgame.title }}" class="w-96 h-96">
+    </div>
+    <div class="mt-6">
+        <p><strong>Rating:</strong> {{ boardgame.ratingBoardgameGeek }}</p>
+        <p><strong>Release Year:</strong> {{ boardgame.releaseYear }}</p>
+        <p><strong>Description:</strong> {{ boardgame.description }}</p>
+        <p><strong>Game Type:</strong> {{ boardgame.gameType }}</p>
+    </div>
 </div>
+
 {% endblock %}
